# streamlit-on-aws-fargate

./: .dockerignore  .gitignore  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: terragrunt-check.yaml
docs/: setup.md
streamlit/: .dockerignore  Dockerfile  Makefile  README.md  app.py  dataset.py  docker-compose.yml  pyproject.toml  sidebar.py
streamlit/.streamlit/: config.toml
streamlit/app/: app.py  dataset.py  sidebar.py
terraform/: terragrunt.hcl
terraform/environments/prod/: Makefile  env.hcl
terraform/envrironments/prod/: Makefile  env.hcl
terraform/envrironments/stg/: env.hcl
terraform/modules/acm/: alb.tf  cognito.tf  data.tf  main.tf  outputs.tf  variables.tf
terraform/modules/alb/: acm.tf  alb.tf  cognito.tf  data.tf  outputs.tf  route53.tf  s3.tf  variables.tf
terraform/modules/cognito/: cognito.tf  outputs.tf  route53.tf  variables.tf
terraform/modules/ecs/: cloudwatch.tf  data.tf  ecr.tf  ecs.tf  iam.tf  main.tf  variables.tf
terraform/modules/security_group/: alb.tf  ecs.tf  outputs.tf  variables.tf
terraform/modules/vpc/: outputs.tf  variables.tf  vpc.tf
terraform/resources/acm/: README.md  main.tf  outputs.tf  variables.tf
terraform/resources/cloudwatch/: README.md  main.tf  outputs.tf  variables.tf
terraform/resources/cognito/: README.md  main.tf  outputs.tf  variables.tf
terraform/resources/internet_gateway/: README.md  outputs.tf
terraform/resources/nat_gateway/: README.md  variables.tf
terraform/resources/route53/: README.md  main.tf  outputs.tf  variables.tf
(+93 files in other folders)
