[tool.poetry]
name = "titanic"
version = "0.1.0"
description = "Titanic - Machine Learning from Disaster"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.10.5"
streamlit = "^1.5.0"
pandas = "^1.4.0"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.960"
pyproject-flake8 = "^5.0.4.post1"
pytest = "^7.1.2"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310']
line-length = 120
exclude = "(\\.ipynb|\\.venv)"

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
skip = [".venv"]

[tool.mypy]
python_version = "3.10"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true
exclude = [".venv"]

[tool.flake8]
max-line-length = 120
max-complexity = 10
ignore = ["E203", "W503"]
